@@ -57,18 +57,7 @@ public final class SqueakTests {
         }
     }
 
-    protected static final class SqueakTest {
-
-        protected final TestType type;
-        protected final String className;
-        protected final String selector;
-
-        protected SqueakTest(final TestType type, final String className, final String selector) {
-            this.type = type;
-            this.className = className;
-            this.selector = selector;
-        }
-
+    protected record SqueakTest(TestType type, String className, String selector) {
         protected String qualifiedName() {
             return className + ">>#" + selector;
         }
@@ -87,7 +76,7 @@ public final class SqueakTests {
     }
 
     protected static Stream<SqueakTest> getTestsToRun(final String filterExpression) {
-        final List<SqueakTest> tests = allTests().filter(getTestFilter(filterExpression)).collect(toList());
+        final List<SqueakTest> tests = allTests().filter(getTestFilter(filterExpression)).toList();
         if (tests.isEmpty()) {
             throw new IllegalArgumentException("No test cases found for filter expression '" + filterExpression + "'");
         }
@@ -111,7 +100,11 @@ public final class SqueakTests {
     }
 
     private static List<String> rawTestNames() {
-        try (BufferedReader reader = new BufferedReader(new InputStreamReader(SqueakTests.class.getResourceAsStream(FILENAME)))) {
+        final InputStream testMapResource = SqueakTests.class.getResourceAsStream(FILENAME);
+        if (testMapResource == null) {
+            throw new IllegalStateException("Unable to find " + FILENAME);
+        }
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(testMapResource))) {
             return reader.lines().map(TEST_CASE_LINE::matcher).filter(Matcher::find).map(Matcher::group).collect(toList());
         } catch (final IOException e) {
             throw new UncheckedIOException(e);
@@ -133,12 +126,12 @@ public final class SqueakTests {
             printError("Image reported duplicate tests");
             return false;
         }
-        mapTestNameSet.removeAll(imageTestNameList);
+        imageTestNameList.forEach(mapTestNameSet::remove);
         if (!mapTestNameSet.isEmpty()) {
             printError("Additional tests in test.properties:\n" + String.join("\n", mapTestNameSet));
             return false;
         }
-        imageTestNameSet.removeAll(mapTestNameList);
+        mapTestNameList.forEach(imageTestNameSet::remove);
         if (!imageTestNameSet.isEmpty()) {
             printError("Additional tests in image:\n" + String.join("\n", imageTestNameSet));
             return false;
